force-app/main/default/objects/Payment_Transaction__c/fields/CreditNote_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>CreditNote_Account_Id__c</fullName>
    <formula>Credit_Note__r.Account__r.Full_AccountId__c</formula>
    <label>CreditNote Account Id</label>
    <type>Text</type>
</CustomField>