force-app/main/default/objects/Payment_Transaction__c/fields/Date_Posted__c.field-meta.xml
<CustomField>
    <fullName>Date_Posted__c</fullName>
    <label>Date Posted</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>