force-app/main/default/objects/Payment_Transaction__c/fields/Intacct_Do_Not_Sync__c.field-meta.xml
<CustomField>
    <fullName>Intacct_Do_Not_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, record does not sync with intacct</description>
    <label>Intacct Do Not Sync</label>
    <type>Checkbox</type>
</CustomField>