force-app/main/default/objects/Payment_Transaction__c/fields/Intacct_ID__c.field-meta.xml
<CustomField>
    <fullName>Intacct_ID__c</fullName>
    <label>Intacct ID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>