force-app/main/default/objects/Payment_Transaction__c/fields/Invoice_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Account_Id__c</fullName>
    <formula>Invoice__r.Account__r.Full_AccountId__c</formula>
    <label>Invoice Account Id</label>
    <type>Text</type>
</CustomField>