force-app/main/default/objects/Payment_Transaction__c/fields/SafeGuard__c.field-meta.xml
<CustomField>
    <fullName>SafeGuard__c</fullName>
    <formula>if(OR(
  NOT(ISBLANK(Intacct_ID__c))
), 
&quot;Can&apos;t delete this payment transaction!&quot;,
&apos;&apos;)</formula>
    <label>SafeGuard</label>
    <type>Text</type>
</CustomField>